--- a/WebApplicationHotel/Views/Shared/_Layout.cshtml
+++ b/WebApplicationHotel/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Registreeri", "SignUp", "Home")</li>
                     <li>@Html.ActionLink("Vaata kasutajaid", "ViewUsers", "Home")</li>
                     <li>@Html.ActionLink("Broneeri", "Booking", "Home")</li>
+                    <li>@Html.ActionLink("Broneeri", "Index", "Booking")</li>
                 </ul>
             </div>
         </div>
