--- a/WebApplicationHotel/Views/Home/Booking.cshtml
+++ b/WebApplicationHotel/Views/Home/Booking.cshtml
@@ -1,9 +1,9 @@
 ﻿@model WebApplicationHotel.Models.BookingModel
-@{
+@*@{
     ViewBag.Title = "Booking";
-}
+}*@
 
-<h2>Booking</h2>
+<h2>Toa broneerimine</h2>
 
 @using (Html.BeginForm())
 {
