--- a/WebApplicationHotel/Views/Booking/Details.cshtml
+++ b/WebApplicationHotel/Views/Booking/Details.cshtml
@@ -1,45 +1,93 @@
-﻿@*@model WebApplicationHotel.Models.BookingModel*@
-@model IEnumerable<WebApplicationHotel.Models.BookingModel>
+﻿@model WebApplicationHotel.Models.BookingModel
+    @*@model DataLibrary.Models.BookingModel*@
+
+
+
 
 @{
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Info broneeringu kohta</h2>
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+<div class="form-horizontal">
+    @*<h4>BookingModel</h4>*@
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.LabelFor(model => Model.RoomId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(Model => Model.RoomId, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.RoomId, "", new { @class = "text-danger" })
+        </div>
+        @Html.HiddenFor(Model => Model.RoomId, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.CheckInDay, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.CheckInDay, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.CheckInDay, "", new { @class = "text-danger" })
+        </div>
+        @Html.HiddenFor(model => model.CheckInDay, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.CheckOutDay, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.CheckOutDay, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.CheckOutDay, "", new { @class = "text-danger" })
+        </div>
+        @Html.HiddenFor(model => model.CheckOutDay, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.RoomSize, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.RoomSize, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.RoomSize, "", new { @class = "text-danger" })
+        </div>
+        @Html.HiddenFor(model => model.RoomSize, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.RoomPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.RoomPrice, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.RoomPrice, "", new { @class = "text-danger" })
+        </div>
+        @Html.HiddenFor(model => model.RoomPrice, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.RoomPriceTotal, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.RoomPriceTotal, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.RoomPriceTotal, "", new { @class = "text-danger" })
+        </div>
+        @Html.HiddenFor(model => model.RoomPriceTotal, new { htmlAttributes = new { @class = "form-control" } })
+    </div>
+
+    @*<div class="form-group">
+        @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.HiddenFor(model => model.UserId)
+            @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+        </div>
+    </div>*@
+    @Html.HiddenFor(model => model.UserId)
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Broneeri" class="btn btn-default" />
+        </div>
+    </div>
+</div>
+}
 
 <div>
-    <h4>RoomModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.RoomSize)
-        </dt>
-        @{
-            var result = Model.GroupBy(x => x.RoomPrice);
-
-        }
-        @foreach (var item in Model)
-
-        {
-            <dd>
-                @Html.DisplayFor(model => item.RoomSize)
-            </dd>
-        }
-
-        <dt>
-            @Html.DisplayNameFor(model => model.RoomPrice)
-        </dt>
-        @foreach (var item in Model)
-        {
-            <dd>
-                @Html.DisplayFor(model => item.RoomPrice)
-            </dd>
-        }
-
-    </dl>
+    @*@Html.ActionLink("Back to List", "BookingDetails")*@
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
-
