--- a/WebApplicationHotel/Views/Shared/_Layout.cshtml
+++ b/WebApplicationHotel/Views/Shared/_Layout.cshtml
@@ -16,19 +16,24 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Hotellitoa broneerimissüsteem", "Booking", "Booking", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
+             
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
+        <li>@Html.ActionLink("About", "About", "Home")</li>
+        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     <li>@Html.ActionLink("Registreeri", "SignUp", "Home")</li>
-                    <li>@Html.ActionLink("Vaata kasutajaid", "ViewUsers", "Home")</li>
-                    <li>@Html.ActionLink("Broneeri", "Booking", "Home")</li>
-                    <li>@Html.ActionLink("Broneeri_uus", "Booking", "Booking")</li>
+                    @if ((Session["UserID"] != null))
+                    {
+                        <li>@Html.ActionLink("Vaata kasutajaid", "ViewUsers", "Home")</li>
+                    }
+                    <li>@Html.ActionLink("Broneeri", "Booking", "Booking")</li>
+                    <li>@Html.ActionLink("Minu broneeringud", "OwnBookingList", "Booking")</li>
+                    <li>@Html.ActionLink("Logi sisse", "Login", "Home")</li>
                 </ul>
-            </div>
+                    </div>
         </div>
     </div>
     <div class="container body-content">
