--- a/WebApplicationHotel/Views/Booking/Delete.cshtml
+++ b/WebApplicationHotel/Views/Booking/Delete.cshtml
@@ -9,7 +9,6 @@
 
 <h3>Kas oled kindel, et soovid broneeringu kustutada?</h3>
 <div>
-    <h4>BookingModel</h4>
     <hr />
     <dl class="dl-horizontal">
 
@@ -62,7 +61,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Kustuta" class="btn btn-default" /> |
             @Html.ActionLink("Tagasi nimekirja", "OwnBookingList")
         </div>
     }
