--- a/WebApplicationHotel/Views/Booking/Details.cshtml
+++ b/WebApplicationHotel/Views/Booking/Details.cshtml
@@ -19,10 +19,10 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => Model.RoomId, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => Model.RoomNumber, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DisplayFor(Model => Model.RoomId, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.RoomId, "", new { @class = "text-danger" })
+            @Html.DisplayFor(Model => Model.RoomNumber, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.RoomNumber, "", new { @class = "text-danger" })
         </div>
         @Html.HiddenFor(Model => Model.RoomId, new { htmlAttributes = new { @class = "form-control" } })
     </div>
