--- a/WebApplicationHotel/Views/Shared/_Layout.cshtml
+++ b/WebApplicationHotel/Views/Shared/_Layout.cshtml
@@ -21,17 +21,23 @@
             <div class="navbar-collapse collapse">
              
                 <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     <li>@Html.ActionLink("Registreeri", "SignUp", "Home")</li>
-                    @if ((Session["UserID"] != null))
-                    {
-                        <li>@Html.ActionLink("Vaata kasutajaid", "ViewUsers", "Home")</li>
-                    }
+                    @if ((Convert.ToInt32(Session["UserRole"]) == 1))
+                        {
+                            <li>@Html.ActionLink("Vaata kasutajaid", "ViewUsers", "Home")</li>
+                            <li>@Html.ActionLink("Vaata broneeringuid", "DisplayAllBookings", "Booking")</li>
+                         }
                     <li>@Html.ActionLink("Broneeri", "Booking", "Booking")</li>
                     <li>@Html.ActionLink("Minu broneeringud", "OwnBookingList", "Booking")</li>
-                    <li>@Html.ActionLink("Logi sisse", "Login", "Home")</li>
+                    @if ((Session["UserID"] == null))
+                        {
+                            <li>@Html.ActionLink("Logi sisse", "Login", "Home")</li>
+                        }
+                    @if ((Session["UserID"] != null))
+                        {
+                            <li>@Html.ActionLink("Logi välja", "Logout", "Home")</li>
+
+                        }
                 </ul>
                     </div>
         </div>
